flushed out index page

--- a/index.html
+++ b/index.html
@@ -10,15 +10,42 @@
 
     <div> </div>
 
-    <span>
+    <span id="cityDescription">
         <p>
-            <h2>Two paragraphs of lorem ipsum text about the city</h2>
+            <h2>About the City</h2>
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+            incididunt ut labore et dolore magna aliqua. Ut etiam sit amet nisl purus in mollis nunc. 
+            Duis at consectetur lorem donec massa sapien faucibus et molestie. Arcu risus quis varius quam. 
+            Tellus molestie nunc non blandit massa enim. Sed ullamcorper morbi tincidunt ornare massa. 
+            Faucibus vitae aliquet nec ullamcorper. Laoreet sit amet cursus sit amet dictum sit amet.
+            Placerat vestibulum lectus mauris ultrices eros in cursus turpis massa. 
+            Orci porta non pulvinar neque laoreet suspendisse.
+        </p>
+        <p>
+            Proin nibh nisl condimentum id venenatis a condimentum. 
+            Id diam vel quam elementum pulvinar etiam. 
+            Mollis aliquam ut porttitor leo a diam. 
+            Neque convallis a cras semper. 
+            Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
+            Mi eget mauris pharetra et ultrices neque ornare aenean. 
+            Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. 
+            Molestie a iaculis at erat pellentesque adipiscing commodo elit at. 
+            Ut sem viverra aliquet eget sit. In est ante in nibh mauris cursus mattis molestie. 
+            Faucibus ornare suspendisse sed nisi lacus sed viverra. Gravida rutrum quisque non tellus orci ac. 
+            Malesuada pellentesque elit eget gravida cum. Enim lobortis scelerisque fermentum dui. 
+            Sed sed risus pretium quam. 
+            Porttitor leo a diam sollicitudin tempor id. 
+            Egestas sed tempus urna et pharetra. 
+            Orci sagittis eu volutpat odio facilisis mauris sit amet. 
+            Magna eget est lorem ipsum. Eu mi bibendum neque egestas congue quisque.
         </p>
     </span>
 
     <div> </div>
 
-    <span id="infoTable"> <!-- Table span-->
+    <span id="infoTable">
         <table>
             <tr>
                 <th>Name</th>
