Flushed out cityimages page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <head>
-
-
 </head>
 
 <body>
     <h1>The City of Futureland</h1>
 
-    <a href=""cityimages.html">Images of the city</a>
+    <a href="cityimages.html">Images of the city</a>
 
     <div> </div>
 
